<resources>
    <string name="app_name">intermediateDua</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dicoding_image">Dicoding image</string>
    <string name="loginimage">LoginImage</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="or">---OR----</string>
    <string name="register_here">Register here</string>
    <string name="register_image">Register image</string>
    <string name="name">name</string>
    <string name="register">register</string>
    <string name="addbutton">addButton</string>
    <string name="ini_gambar">Ini Gambar</string>
    <string name="camera">camera</string>
    <string name="galery">galery</string>
    <string name="content_description">Content Description</string>
    <string name="add_story">Add story</string>
    <string name="logout">logout</string>
    <string name="tomaps">toMaps</string>
</resources>