<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="24dp"
    tools:context=".presentation.loginScreen.LoginFragment">
    <ProgressBar
        android:id="@+id/pb_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="75dp"
        android:src="@drawable/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/loginimage" />
    <com.example.intermediatedua.utils.CustomEmail
        android:id="@+id/ed_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:hint="@string/email"
        app:layout_constraintTop_toBottomOf="@+id/loginImage"
        />
    <com.example.intermediatedua.utils.CustomPassword
        android:id="@+id/ed_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="24dp"
        app:layout_goneMarginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/ed_email"
        />
    <com.example.intermediatedua.utils.CustomButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@+id/ed_password"
        />
    <TextView
        android:id="@+id/tv_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"/>

    <com.example.intermediatedua.utils.CustomButton
        android:id="@+id/btn_toRegister"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_or"
        android:text="@string/register_here"
        />
</androidx.constraintlayout.widget.ConstraintLayout>