<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.addStoryScreen.AddStoryFragment">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_story"
        android:layout_width="match_parent"
        android:background="@color/mainColor"
        app:title="Add ur Story"
        app:navigationIcon="@drawable/baseline_arrow_back_ios_24"
        app:navigationIconTint ="@color/white"
        app:titleTextColor="@color/white"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        />
    <ImageView
        android:id="@+id/iv_review_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_add_story"
        android:src="@drawable/baseline_image_24"
        android:contentDescription="@string/ini_gambar" />
    <com.example.intermediatedua.utils.CustomButton
        android:id="@+id/btn_to_camera"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:text="@string/camera"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_review_image"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.example.intermediatedua.utils.CustomButton
        android:id="@+id/btn_to_galery"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/galery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.977"
        app:layout_constraintStart_toEndOf="@+id/btn_to_camera"
        app:layout_constraintTop_toBottomOf="@+id/iv_review_image" />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/ed_content_description"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        android:hint="@string/content_description"
        app:layout_constraintTop_toBottomOf="@+id/btn_to_galery"
        />
    <com.example.intermediatedua.utils.CustomButton
        android:id="@+id/btn_add_story"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/add_story"
        />
</androidx.constraintlayout.widget.ConstraintLayout>